modify composition page to fix missing border

--- a/software/cananolab-webapp/web/css/summaryView.css
+++ b/software/cananolab-webapp/web/css/summaryView.css
@@ -117,7 +117,6 @@
 	border-color: #cccccc;
 	padding: 3px 3px 3px 3px;
 	border-style: solid;
-	border-collapse: collapse;
 	color: #5C5C5C;
 	margin-top: 5px;
 }
